# rndr

./: .gitignore  Cargo.toml  Cube.stl  README.md  todo
.devcontainer/: devcontainer.json
crates/examples/collision_detection/: Cargo.toml
crates/examples/collision_detection/src/: main.rs
crates/examples/projection/: Cargo.toml
crates/examples/projection/src/: main.rs
crates/examples/raycasting/: Cargo.toml
crates/examples/raycasting/src/: main.rs
crates/examples/screen_fill/: Cargo.toml
crates/examples/screen_fill/src/: main.rs
crates/examples/shaders/z_shader/: Cargo.toml
crates/rndr-core/: Cargo.toml
crates/rndr-core/src/: camera.rs  instance.rs  lib.rs  object.rs  pixel.rs  render.rs
crates/rndr-core/src/default_components/: mod.rs  transform.rs
crates/rndr-core/src/default_components/render/: camera.rs  mesh_renderable.rs  mod.rs
crates/rndr-core/src/default_objects/: mod.rs
crates/rndr-core/src/default_systems/: mesh_renderer.rs  mod.rs
crates/rndr-core/src/render/: camera.rs  mod.rs  pixel.rs  shader.rs
crates/rndr-core/src/scene/: mod.rs  object.rs
crates/rndr-math/: Cargo.toml
crates/rndr-math/src/: lib.rs  matrix.rs  shape.rs  transform.rs  vector.rs  vertex.rs
crates/rndr-phys/: Cargo.toml
crates/rndr-phys/src/: collision.rs  lib.rs  mod.rs  ray.rs  raycast.rs
crates/rndr-phys/src/components/: mesh_collider.rs  mod.rs  rigidbody.rs  sphere_collider.rs
crates/rndr-phys/src/systems/: collision_manager.rs  mod.rs  physics_manager.rs
crates/rndr-phys/src/traits/: collidable.rs  mod.rs  raycastable.rs
src/: main.rs  pixels.rs
(+1 files in other folders)
