[package]
name = "rndr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35", features = [
    "unsafe_textures",
], default-features = false }
thiserror = "1.0"
getset = "0.1"
rayon = "1.10"

rndr-math = { path = "../rndr-math" }

stl = "0.2.1"
downcast-rs = "1.2.1"
